--- a/src/app/main-toolbar/main-toolbar.component.html
+++ b/src/app/main-toolbar/main-toolbar.component.html
@@ -142,7 +142,7 @@
         </mat-menu>
         &nbsp;&nbsp;
         <ng5-slider [(value)]="rangeFilter.selStart" [(highValue)]="rangeFilter.selEnd"
-          [options]="rangeFilter.rangeOptions" (userChangeEnd)="refreshEntries()"></ng5-slider>
+          [options]="rangeFilter.rangeOptions" (valueChange)="refreshEntries()"></ng5-slider>
         <button class="but_reset_range_filter" mat-button color="accent" mat-icon-button
           matTooltip="Reset value range filter" [disabled]="!rangeFilter.isFiltered()"
           (click)="resetRangeFilter(rangeFilter)">
