--- a/src/app/main-toolbar/main-toolbar.component.html
+++ b/src/app/main-toolbar/main-toolbar.component.html
@@ -141,8 +141,9 @@
           </button>
         </mat-menu>
         &nbsp;&nbsp;
-        <ng5-slider [value]="rangeFilter.selStart" [highValue]="rangeFilter.selEnd"
-          [options]="rangeFilter.rangeOptions" (userChangeEnd)="onRangeFilterChanged(rangeFilter, $event)"></ng5-slider>
+        <ng5-slider [value]="rangeFilter.selValueRange.min" [highValue]="rangeFilter.selValueRange.max"
+          [options]="rangeFilter.sliderOptions" (highValueChange)="rangeFilter.selValueRange.maxExcluding = false"
+          (userChangeEnd)="onRangeFilterChanged(rangeFilter, $event)"></ng5-slider>
         <button class="but_reset_range_filter" mat-button color="accent" mat-icon-button
           matTooltip="Reset value range filter" [disabled]="!rangeFilter.isFiltered()"
           (click)="resetRangeFilter(rangeFilter)">
