landing page layout change

--- a/src/app/front/front.component.html
+++ b/src/app/front/front.component.html
@@ -2,15 +2,11 @@
   <mat-card-content>
 
     <div id="header">
-
-      <div id="div_logo">
-        <img id="img_logo" src="../../assets/koialogo_textblack.png">
+      <div>
+        <img src="../../assets/koialogo_textblack.png">
       </div>
-
-      <div id="div_retrologo">
-        <p>
-          Compatible with <a href="https://retrospective.centeractive.com/" target="_blank"><img id="img_retro" src="../../assets/retrospective_log_analyzer_logo.png"></a>
-        </p>
+      <div>
+        <a href="https://retrospective.centeractive.com/" target="_blank"><img src="../../assets/retrospective_compatible.png"></a>
       </div>
     </div>
 
@@ -76,13 +72,13 @@
       <mat-card class="action-card">
         <mat-card-header>
           <div mat-card-avatar id="create-image"></div>
-          <mat-card-title>Step 3: Create graphics</mat-card-title>
-          <mat-card-subtitle>Display your data as charts, pivot tables, etc.</mat-card-subtitle>
+          <mat-card-title>Step 3: Analyze your data</mat-card-title>
+          <mat-card-subtitle>Shape, visualyze and analyze your data</mat-card-subtitle>
         </mat-card-header>
         <img mat-card-image src="../../assets/graph_close.png">
         <mat-card-content>
           <p>
-            Refine your data with time and value filters and create pivot tables, relationship graphs, summaries and a variety of different charts.
+            Refine your data with time and value filters and create pivot tables, summaries, relationship graphs and a variety of different charts.
           </p>
            <p>
             When satisfied with the outcome, it is possible to save the view or to export the graphics as PNG images.
