new icons flex/grid view

--- a/src/app/flex-canvas/flex-canvas.component.html
+++ b/src/app/flex-canvas/flex-canvas.component.html
@@ -41,14 +41,14 @@
          </mat-menu>
 
          &nbsp;&nbsp;&nbsp;
-         <button mat-button mat-icon-button matTooltip="New Chart" (click)="addChart()">
-            <mat-icon svgIcon="new_chart"></mat-icon>
+         <button mat-button mat-icon-button matTooltip="Add Chart" (click)="addChart()">
+            <mat-icon svgIcon="add_chart"></mat-icon>
          </button>
-         <button mat-button mat-icon-button matTooltip="New Relationship Graph" (click)="addGraph()">
-            <mat-icon svgIcon="new_graph"></mat-icon>
+         <button mat-button mat-icon-button matTooltip="Add Relationship Graph" (click)="addGraph()">
+            <mat-icon svgIcon="add_relationship_graph"></mat-icon>
          </button>
-         <button mat-button mat-icon-button matTooltip="New Summary" (click)="addSummaryTable()">
-            <mat-icon svgIcon="new_summary_table"></mat-icon>
+         <button mat-button mat-icon-button matTooltip="Add Summary" (click)="addSummaryTable()">
+            <mat-icon svgIcon="add_summary"></mat-icon>
          </button>
       </div>
    </div>
