fixed ERROR TypeError: Cannot read property 'length' of undefined

--- a/src/app/front/front.component.html
+++ b/src/app/front/front.component.html
@@ -89,7 +89,7 @@
 
     <div id="div_start">
       <button mat-button mat-icon-button matTooltip="Start" [routerLink]="[urlScenes]">
-        <mat-icon id="start_button" color="accent">play_circle_filled</mat-icon>
+        <mat-icon id="start_button" color="accent">play_circle_outline</mat-icon>
       </button>
     </div>
 
