--- a/src/app/summary-table/summary-table-side-bar/summary-table-side-bar.component.html
+++ b/src/app/summary-table/summary-table-side-bar/summary-table-side-bar.component.html
@@ -57,7 +57,7 @@
       </mat-expansion-panel-header>
       <span class="span_left_to_right">
          <label>max. {{ grouping.minMaxValues.max }}</label>
-         <button mat-button mat-icon-button matTooltip="Add Value Range" (click)="addGroupingRange(grouping)">
+         <button mat-button mat-icon-button matTooltip="Add Value Range" (click)="addGroupingValueRange(grouping)">
             <mat-icon>add_circle_outline</mat-icon>
          </button>
       </span>
