new icons flex/grid view #2

--- a/src/app/grid/grid.component.html
+++ b/src/app/grid/grid.component.html
@@ -71,7 +71,7 @@
 
          &nbsp;&nbsp;&nbsp;
          <button mat-button mat-icon-button matTooltip="Add Chart" (click)="addChart()">
-            <mat-icon svgIcon="add_chart"></mat-icon>
+            <mat-icon svgIcon="add_chart_new"></mat-icon>
          </button>
          <button mat-button mat-icon-button matTooltip="Add Relationship Graph" (click)="addGraph()">
             <mat-icon svgIcon="add_relationship_graph"></mat-icon>
