--- a/src/app/flex-canvas/flex-canvas.component.html
+++ b/src/app/flex-canvas/flex-canvas.component.html
@@ -17,7 +17,7 @@
       <koia-main-toolbar [route]="route" (onAfterViewChecked)="adjustLayout()"
          (onFilterChange)="onFilterChanged($event)">
       </koia-main-toolbar>
-      <mat-progress-bar *ngIf="loading" mode="indeterminate"></mat-progress-bar>
+      <mat-progress-bar *ngIf="loading" mode="indeterminate" matTooltip="Loading Data..."></mat-progress-bar>
       <div id="view_toolbar">
          <button id="but_print" mat-button mat-icon-button printSectionId="print-section" ngxPrint
             matTooltip="Print current view" [disabled]="elementContexts.length === 0" (click)="printView()">
