--- a/src/app/front/front.component.css
+++ b/src/app/front/front.component.css
@@ -13,7 +13,7 @@ p {
    display: flex;
    flex-wrap: wrap;  
    align-items: stretch;
-   justify-content: space-between;
+   justify-content: space-around;
    margin: 0px 20px 0px 20px;
    padding-bottom: 20px;
 }
@@ -22,6 +22,7 @@ p {
    min-width: 250px;
    max-width: 400px;
    margin: 0px 4px 0px 4px;
+   background-color: rgb(208, 245, 199);
 }
 
 .div_actions {
