--- a/src/app/grid/grid.component.html
+++ b/src/app/grid/grid.component.html
@@ -71,10 +71,10 @@
 
          &nbsp;&nbsp;&nbsp;
          <button mat-button mat-icon-button matTooltip="Add Chart" (click)="addChart()">
-            <mat-icon svgIcon="add_chart_new"></mat-icon>
+            <mat-icon svgIcon="add_chart"></mat-icon>
          </button>
          <button mat-button mat-icon-button matTooltip="Add Relationship Graph" (click)="addGraph()">
-            <mat-icon svgIcon="add_relationship_graph"></mat-icon>
+            <mat-icon svgIcon="add_graph"></mat-icon>
          </button>
          <button mat-button mat-icon-button matTooltip="Add Summary" (click)="addSummaryTable()">
             <mat-icon svgIcon="add_summary"></mat-icon>
