--- a/src/app/front/front.component.html
+++ b/src/app/front/front.component.html
@@ -3,22 +3,26 @@
 
     <div id="header">
       <div>
+
+      </div>
+      <div>
         <img src="../../assets/koialogo_textblack.png">
       </div>
       <div>
-        <a href="https://retrospective.centeractive.com/" target="_blank"><img src="../../assets/retrospective_compatible.png"></a>
+        <a href="https://retrospective.centeractive.com/" target="_blank"><img
+            src="../../assets/retrospective_compatible.png"></a>
       </div>
     </div>
 
     <div id="div_action_cards">
 
-      <mat-card class="action-card">
+      <mat-card class="intro-card koia-color-left">
         <mat-card-header>
-          <div mat-card-avatar [id]="selectedDataStorage === couchDB ? 'couchdb-image' : 'browser-image'"></div>
-          <mat-card-title>Step 1: Data Storage</mat-card-title>
-          <mat-card-subtitle>Define where to store the data</mat-card-subtitle>
+          <div mat-card-avatar [id]="selectedDataStorage === couchDB ? 'couchdb-image' : 'monitor-image'"></div>
+          <mat-card-title>Step 1: Choose data storage</mat-card-title>
+          <mat-card-subtitle class="koia-color-left">Define where to store the data</mat-card-subtitle>
         </mat-card-header>
-        <img mat-card-image src="../../assets/source_context.png">
+        <img mat-card-image class="intro-card-image" src="../../assets/data-source.png">
         <mat-card-content>
           <p>
             Koia writes and reads data from the browser's internal
@@ -48,20 +52,22 @@
         </mat-card-actions>
       </mat-card>
 
-      <mat-card class="action-card">
+      <mat-card class="intro-card koia-color-center">
         <mat-card-header>
-          <div mat-card-avatar id="importselect-image"></div>
-          <mat-card-title>Step 2: Import and select data</mat-card-title>
+          <div mat-card-avatar id="folder-document-image"></div>
+          <mat-card-title>Step 2: Import data to scene</mat-card-title>
           <mat-card-subtitle>Create new scene or select an existing one</mat-card-subtitle>
         </mat-card-header>
-        <img mat-card-image src="../../assets/active_scene.png">
+        <img mat-card-image class="intro-card-image" src="../../assets/data.png">
         <mat-card-content>
           <p>
-            Import data to create a new scene or select an existing scene containing data that has been previously imported.
-          </p>  
+            Import data to create a new scene or select an existing scene containing data that has been previously
+            imported.
+          </p>
           <p>
-            At any time later it is possible to switch between scenes or to create new ones by pressing the <mat-icon style="vertical-align: middle">collections
-            </mat-icon> or <mat-icon style="vertical-align: middle"> add_photo_alternate</mat-icon> buttons.
+            At any time later it is possible to switch between scenes or to create new ones by pressing the <mat-icon
+              style="vertical-align: middle">collections
+            </mat-icon> or <mat-icon style="vertical-align: middle"> add_photo_alternate</mat-icon> button.
           </p>
           <p *ngIf="ready && scenesCount >= 0">
             {{ selectedDataStorage }} currently contains <b>{{ scenesCount }} scenes.</b>
@@ -69,21 +75,22 @@
         </mat-card-content>
       </mat-card>
 
-      <mat-card class="action-card">
+      <mat-card class="intro-card koia-color-right">
         <mat-card-header>
-          <div mat-card-avatar id="create-image"></div>
-          <mat-card-title>Step 3: Visualyze and analyze data</mat-card-title>
-          <mat-card-subtitle>Shape, visualyze and analyze your data</mat-card-subtitle>
+          <div mat-card-avatar id="line-chart-image"></div>
+          <mat-card-title>Step 3: Visualyze and analyze</mat-card-title>
+          <mat-card-subtitle class="koia-color-right">Shape, visualyze and analyze your data</mat-card-subtitle>
         </mat-card-header>
-        <img mat-card-image src="../../assets/graph_close.png">
+        <img mat-card-image class="intro-card-image" src="../../assets/graph_close.png">
         <mat-card-content>
           <p>
-            Refine your data with time and value filters and create pivot tables, summaries, relationship graphs and a variety of different charts.
+            Refine your data with time and value filters and create pivot tables, summaries, relationship graphs and a
+            variety of different charts.
           </p>
-           <p>
+          <p>
             When satisfied with the outcome, it is possible to save the view or to export the graphics as PNG images.
           </p>
-        </mat-card-content>      
+        </mat-card-content>
       </mat-card>
     </div>
 
@@ -130,14 +137,17 @@
           </mat-card-header>
           <mat-card-content>
             <p>
-              Koia is an <a href="https://angular.io/" target="_blank">angular-based</a>, open-source web tool that anyone can use
+              Koia is an <a href="https://angular.io/" target="_blank">angular-based</a>, open-source web tool that
+              anyone can use
               for free to create pivot tables, summaries and charts out of custom data in just a few minutes.
             </p>
             <p>
               Koia was originally built to improve analysis and visualization capabilities for data collected and
-              structured with the amazing <a href="https://retrospective.centeractive.com/" target="_blank">Retrospective
+              structured with the amazing <a href="https://retrospective.centeractive.com/"
+                target="_blank">Retrospective
                 Log Analyzer</a>&nbsp;
-              <a href="https://retrospective.centeractive.com/" target="_blank"><img id="img_retro" src="../../assets/retrospective.png"></a>
+              <a href="https://retrospective.centeractive.com/" target="_blank"><img id="img_retro"
+                  src="../../assets/retrospective.png"></a>
             </p>
           </mat-card-content>
         </mat-card>
@@ -176,12 +186,16 @@
           </mat-card-header>
           <mat-card-content>
             <p>
-              Koia differs from similar programs mainly in that the context to the original data is never lost. You are always only a mouseclick apart from seeing the raw data on which the displayed element or value is based. 
-              Next to this, Koia enables the uploading of multiple data sets, so it is possible to create graphics based on different data without opening a lot of tabs in your browser but switching between the data sets in one tab.
+              Koia differs from similar programs mainly in that the context to the original data is never lost. You are
+              always only a mouseclick apart from seeing the raw data on which the displayed element or value is based.
+              Next to this, Koia enables the uploading of multiple data sets, so it is possible to create graphics based
+              on different data without opening a lot of tabs in your browser but switching between the data sets in one
+              tab.
             </p>
             <p>Other features:</p>
             <ul>
-              <li>Column filters supporting  the following operators: contains, &lt;, &lt;=, =, &gt;=, &gt;, not empty</li>
+              <li>Column filters supporting the following operators: contains, &lt;, &lt;=, =, &gt;=, &gt;, not empty
+              </li>
               <li>Draggable column value range filters</li>
               <li>Automatic and manual value range grouping</li>
               <li>Customizable grids</li>
@@ -264,6 +278,10 @@
             <ul>
               <li>The <b>Raw Data</b> table presents the data in an unprocessed form in pages of adjustable size.
                 The table offers sorting and filtering of individual columns.</li>
+              <li>The <b>Pivot Table</b> is a powerful tool to compute, summarize, and analyze data, with revealing
+                patterns and trends. It's based on amazing <a href="https://www.npmjs.com/package/pivottable"
+                  target="_blank">PivotTable.js</a> that offers many different views (e.g. heatmaps and table barcharts)
+                and lets you shape the pivot table through drag and drop of individual columns.</li>
               <li>The <b>Grid View</b> contains a variable number of elements that are held in a fixed grid of
                 customizable dimension. Grid elements (summary tables, charts and graphs) may fit into a single cell or
                 they may spread over several columns and rows, it's all up to you. When the window size changes, the
@@ -272,10 +290,6 @@
               <li>The <b>Flex View</b> contains a variable number of elements (summary tables, charts and graphs) of
                 specific size each. When the window size changes, the size of single elements are not changed. The
                 elements are however automatically laid out according to the available window space.</li>
-              <li>The <b>Pivot Table</b> is a powerful tool to compute, summarize, and analyze data, with revealing
-                patterns and trends. It's based on amazing <a href="https://www.npmjs.com/package/pivottable"
-                  target="_blank">PivotTable.js</a> that offers many different views (e.g. heatmaps and table barcharts)
-                and lets you shape the pivot table through drag and drop of individual columns.</li>
             </ul>
           </mat-card-content>
         </mat-card>
