--- a/src/app/front/front.component.css
+++ b/src/app/front/front.component.css
@@ -1,6 +1,17 @@
 #header {
    display: flex;
-   justify-content: space-around;
+   justify-content: center;
+   margin-bottom: 10px;
+}
+
+#img_koia {
+   z-index: 10;
+}
+
+#img_retro_compatible {
+   position: absolute;
+   top: 10px;
+   right: 15px;
 }
 
 p {
@@ -44,15 +55,24 @@ p {
    padding-top: 40px;
 }
 
+.mat-active {
+   background-color: green;
+   color: #fff;
+}
+
+.mat-inactive {
+   background-color: lightgray;
+   color: black;
+}
+
 #div_start {
-   width: 100%;
    display: flex;
    justify-content: center;
    margin: 30px 0px 30px 0px;
 }
 
 #start_button {
-   font-size: 75px;
+   font-size: 80px;
 }
 
 #monitor-image {
@@ -87,7 +107,7 @@ p {
 }
 
 #about-image {
-   background-image: url('../../assets/mat-icons/about_koia.png');
+   background-image: url('../../assets/mat-icons/about.png');
    background-repeat:no-repeat;
    background-size: cover;
 }
