--- a/src/app/front/front.component.html
+++ b/src/app/front/front.component.html
@@ -19,7 +19,7 @@
         <img mat-card-image class="intro-card-image" src="../../assets/data-source.png">
         <mat-card-content>
           <p>
-            Koia writes and reads data from the browser's internal IndexedDB or from an external database
+            Koia writes and reads data from the browser's internal IndexedDB or from an external CouchDB database
             <a href="http://couchdb.apache.org/" target="_blank">
               <mat-icon style="color: white; vertical-align: middle" matTooltip="Tell me more...">info_outlined
               </mat-icon>
@@ -83,11 +83,13 @@
         <img mat-card-image class="intro-card-image" src="../../assets/graph_close.png">
         <mat-card-content>
           <p>
-            Refine your data with time and value filters and create pivot tables, summaries, relationship graphs and a
+            Refine your data applying value and range filters. Create pivot tables, summaries, relationship graphs and a
             variety of different charts.
           </p>
           <p>
-            Charts may be exported as images. Views can be saved and then restored as required.
+            Pivot tables and summaries can be exported to Excel files, charts may be saved as images. 
+            Entire views can be saved and then restored as required.
+          </p>  
         </mat-card-content>
       </mat-card>
     </div>
@@ -135,7 +137,7 @@
           </mat-card-header>
           <mat-card-content>
             <p>
-              Koia is an open-source web tool that anyone can use for free to create pivot tables,
+              Koia is an open-source application that anyone can use for free to create pivot tables,
               summaries and charts out of custom data in just a few minutes.
             </p>
             <p>
