raw data view for graph nodes representing empty values

--- a/src/app/front/front.component.html
+++ b/src/app/front/front.component.html
@@ -20,7 +20,7 @@
         <mat-card-content>
           <p>
             Koia writes and reads data from the browser's internal IndexedDB or from an external CouchDB database
-            <a href="http://couchdb.apache.org/" target="_blank">
+            <a href="https://github.com/centeractive/koia/blob/master/README.md#getting-started" target="_blank">
               <mat-icon style="color: white; vertical-align: middle" matTooltip="Tell me more...">info_outlined
               </mat-icon>
             </a>.
