--- a/src/styles.css
+++ b/src/styles.css
@@ -43,7 +43,7 @@ body {
 }
 
 #view_toolbar {
-  background-color: #f5e2e2;
+  background-color: #e2e8f5;
   width: 100%;
   border-top: 1px solid rgb(145, 144, 144);    
 }
