--- a/src/app/scenes/scenes.component.html
+++ b/src/app/scenes/scenes.component.html
@@ -7,7 +7,7 @@
 <mat-card id="mat_card_active_scene" *ngIf="activeScene">
 
   <mat-card-header>
-    <div mat-card-avatar id="activescene-image"></div>
+    <div mat-card-avatar id="image-scene"></div>
     <mat-card-title>Active Scene</mat-card-title>
     <mat-card-subtitle>This is the scene you're currently working with</mat-card-subtitle>
   </mat-card-header>
@@ -47,7 +47,7 @@
 <mat-card id="mat_card_all_scenes">
 
   <mat-card-header>
-    <div mat-card-avatar id="importselect-image"></div>
+    <div mat-card-avatar id="image-scenes"></div>
     <mat-card-title>All Scenes
     </mat-card-title>
     <mat-card-subtitle>Manage your existing scenes. Activate one to start creating graphics.
