--- a/src/app/raw-data/raw-data.component.css
+++ b/src/app/raw-data/raw-data.component.css
@@ -12,8 +12,8 @@ table {
 }
 
 th {
-   text-align: left;
-   padding: 5px;   
+   height: 24px;
+   padding: 5px;
    background-color: white;
 }
 
