--- a/src/app/front/front.component.html
+++ b/src/app/front/front.component.html
@@ -243,7 +243,7 @@
       <mat-step label="Scenes" state="scenes" [stepControl]="stepVisibleControl">
         <mat-card class="info-card" *ngIf="stepsVisible">
           <mat-card-header>
-            <div mat-card-avatar id="datascene-image"></div>
+            <div mat-card-avatar id="image-scenes"></div>
             <mat-card-title>What is a Scene?</mat-card-title>
             <mat-card-subtitle>Scenes represent individual datasets</mat-card-subtitle>
           </mat-card-header>
